[package]
name = "one-block-army"
version = "0.1.0"
edition = "2024"

[dependencies]
blocking-http-server = "0.1.3"
cached = "0.56.0"
glob-match = "0.2.1"
gumdrop = "0.8.1"
hostname-validator = "1.1.1"
reqwest = {version="0.12.22", features=["blocking"]}
serde = {version="1.0.219", features=["derive"]}
toml = "0.8.23"
